// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadClient getAccount 1`] = `
Array [
  Array [
    "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
    undefined,
  ],
]
`;

exports[`ReadClient getAsset 1`] = `
Array [
  Array [
    "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
    undefined,
  ],
]
`;

exports[`ReadClient getBestBlockHash 1`] = `
Array [
  Array [
    undefined,
  ],
]
`;

exports[`ReadClient getBlock - number 1`] = `
Array [
  Array [
    0,
    undefined,
  ],
]
`;

exports[`ReadClient getBlock 1`] = `
Array [
  Array [
    "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
    undefined,
  ],
]
`;

exports[`ReadClient getBlockCount 1`] = `
Array [
  Array [
    undefined,
  ],
]
`;

exports[`ReadClient getConnectedPeers 1`] = `
Array [
  Array [
    undefined,
  ],
]
`;

exports[`ReadClient getContract 1`] = `
Array [
  Array [
    "ALq7AWrhAueN6mJNqk6FHJjnsEoPRytLdW",
    undefined,
  ],
]
`;

exports[`ReadClient getMemPool 1`] = `
Array [
  Array [
    undefined,
  ],
]
`;

exports[`ReadClient getOutput 1`] = `
Array [
  Array [
    Object {
      "hash": "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
      "index": 0,
    },
    undefined,
  ],
]
`;

exports[`ReadClient getTransaction 1`] = `
Array [
  Array [
    "0xb50034d97ba8c836758de1124b6c77d38bc772abc9a8f22c85e7389014e75234",
    undefined,
  ],
]
`;

exports[`ReadClient iterBlocks 1`] = `
Array [
  Array [
    Object {
      "indexStart": 3,
      "indexStop": 4,
      "monitor": undefined,
    },
  ],
]
`;
